fix ci again